<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <include layout="@layout/toolbar"/>
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/size_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="@integer/username_max_length"
            android:drawableLeft="@drawable/ic_username"
            android:drawableRight="@drawable/btn_edit_clear_selector"
            android:hint="@string/hint_username"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="@integer/verify_code_max_length"
            android:drawableLeft="@drawable/ic_verify_code"
            android:hint="@string/hint_verify_code"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintRight_toLeftOf="@+id/tvGetCode"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tvGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_line_v"
            android:minWidth="@dimen/size_110dp"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_10dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical|right"
            android:text="@string/send_verify_code"
            android:textColor="@color/text_theme"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/OnClick"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_password_eye_selector"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:textSelectHandle="@null"
            app:layout_constraintTop_toBottomOf="@+id/tvGetCode"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tvTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/tips_password_matcher"
            android:textColor="@color/text_9"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintBottom_toTopOf="@+id/cbUserAgreement"/>
        <CheckBox
            android:id="@+id/cbUserAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/cb_button_selector"
            android:drawablePadding="@dimen/size_6dp"
            android:text="@string/tips_user_agreement"
            android:textColor="@color/text_6"
            android:textSize="@dimen/size_13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTips" />
        <TextView
            android:id="@+id/tvTermOfService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:textColor="@color/text_theme"
            android:textSize="@dimen/size_13sp"
            android:text="@string/tips_user_terms_of_service"
            app:layout_constraintTop_toBottomOf="@+id/tvTips"
            app:layout_constraintLeft_toRightOf="@+id/cbUserAgreement"
            style="@style/OnClick"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="@dimen/size_16sp"
            android:background="@drawable/btn_bg_selector"
            app:layout_constraintTop_toBottomOf="@+id/cbUserAgreement"
            style="@style/OnClick"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14dp"
            android:layout_marginRight="@dimen/size_14dp"
            android:layout_marginTop="@dimen/size_6dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <TextView
                android:id="@+id/tvExistAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_8dp"
                android:paddingTop="@dimen/size_8dp"
                android:paddingBottom="@dimen/size_8dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_6"
                android:text="@string/label_exist_account"/>
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_8dp"
                android:paddingBottom="@dimen/size_8dp"
                android:paddingRight="@dimen/size_8dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_theme"
                android:text="@string/login_now"
                style="@style/OnClick"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>