<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_layer">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbMenu1"
        android:paddingTop="@dimen/size_2dp"
        android:paddingBottom="@dimen/size_2dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbMenu1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_menu1_selector"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:drawablePadding="2dp"
            android:text="@string/home_menu1"
            android:textColor="@color/home_menu_selector"
            android:textSize="12sp"
            style="@style/OnClick"/>
        <RadioButton
            android:id="@+id/rbMenu2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_menu2_selector"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:drawablePadding="2dp"
            android:text="@string/home_menu2"
            android:textColor="@color/home_menu_selector"
            android:textSize="12sp"
            style="@style/OnClick"/>
        <RadioButton
            android:id="@+id/rbMenu3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_menu3_selector"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:drawablePadding="2dp"
            android:text="@string/home_menu3"
            android:textColor="@color/home_menu_selector"
            android:textSize="12sp"
            style="@style/OnClick"/>
        <RadioButton
            android:id="@+id/rbMenu4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_menu4_selector"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:drawablePadding="2dp"
            android:text="@string/home_menu4"
            android:textColor="@color/home_menu_selector"
            android:textSize="12sp"
            style="@style/OnClick"/>

    </RadioGroup>
</LinearLayout>