<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <include layout="@layout/toolbar"/>
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/size_80dp"
            android:layout_height="@dimen/size_80dp"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/size_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="@integer/username_max_length"
            android:drawableLeft="@drawable/ic_username"
            android:drawableRight="@drawable/btn_edit_clear_selector"
            android:hint="@string/hint_username"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_password_eye_selector"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:textSelectHandle="@null"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tvForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14dp"
            android:layout_marginRight="@dimen/size_14dp"
            android:layout_marginTop="@dimen/size_6dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_theme"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/OnClick"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="@dimen/size_16sp"
            android:background="@drawable/btn_bg_selector"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPwd"
            style="@style/OnClick"/>
        <TextView
            android:id="@+id/tvCodeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14dp"
            android:layout_marginRight="@dimen/size_14dp"
            android:layout_marginTop="@dimen/size_6dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_theme"
            android:text="@string/verify_code_login"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/OnClick"/>
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_14dp"
            android:layout_marginRight="@dimen/size_14dp"
            android:layout_marginTop="@dimen/size_6dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_theme"
            android:text="@string/register_now"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/OnClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>