<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <include layout="@layout/toolbar"/>
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="@integer/username_max_length"
            android:drawableLeft="@drawable/ic_username"
            android:drawableRight="@drawable/btn_edit_clear_selector"
            android:hint="@string/hint_username"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="@integer/verify_code_max_length"
            android:drawableLeft="@drawable/ic_verify_code"
            android:hint="@string/hint_verify_code"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintRight_toLeftOf="@+id/tvGetCode"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tvGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/size_110dp"
            android:drawableLeft="@drawable/ic_line_v"
            android:layout_marginLeft="@dimen/size_16dp"
            android:layout_marginRight="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_10dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical|right"
            android:text="@string/send_verify_code"
            android:textColor="@color/text_theme"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/OnClick"/>
        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_password_eye_selector"
            android:hint="@string/hint_new_password"
            android:imeOptions="actionNext"
            android:textSelectHandle="@null"
            app:layout_constraintTop_toBottomOf="@+id/etCode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line_bg_selector"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:drawablePadding="@dimen/size_6dp"
            android:padding="@dimen/size_8dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:drawableLeft="@drawable/ic_password"
            android:drawableRight="@drawable/btn_password_eye_selector"
            android:hint="@string/hint_confirm_new_password"
            android:imeOptions="actionDone"
            android:textSelectHandle="@null"
            app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tvTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/tips_password_matcher"
            android:textColor="@color/text_9"
            android:textSize="@dimen/size_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnReset"/>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginRight="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_40dp"
            android:textColor="@color/white"
            android:text="@string/reset_password"
            android:textSize="@dimen/size_16sp"
            android:background="@drawable/btn_bg_selector"
            app:layout_constraintTop_toBottomOf="@+id/tvTips"
            style="@style/OnClick"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>